fix: Contrast of Book2 title attempt 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,7 @@ h1, h2, h3, h4, h5{
     color: #FFFFFF;
 }
 .book-2-title{
-    color: #ff4e51;
+    color: #ff0000;
 }
 .book-3-title{
     color: #6ec5ba;
